kubernetes/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emergency-healthcare-prod
  labels:
    name: emergency-healthcare-prod
    environment: production
