kubernetes/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emergency-healthcare
spec:
  template:
    spec:
      containers:
        - name: emergency-healthcare
          resources:
            limits:
              cpu: 2000m
              memory: 4Gi
            requests:
              cpu: 1000m
              memory: 2Gi
